--- a/pages/resume.html
+++ b/pages/resume.html
@@ -20,12 +20,12 @@ margin-bottom:0in;margin-left:-22.5pt;text-align:center'>
         <span>
             <span style='mso-spacerun:yes'> </span>
         </span>
-        <span style='mso-bidi-font-size:10.0pt;font-family:"Calibri",sans-serif'>8 Fairlawn Lane, Lexington, MA
+        <span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif'>8 Fairlawn Lane, Lexington, MA
             02420</span>
         <span style='mso-no-proof:yes'>|</span>
-        <span style='mso-bidi-font-size:10.0pt;font-family:"Calibri",sans-serif'>+1-617-320-0493</span>
+        <span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif'>+1-617-320-0493</span>
         <span style='mso-no-proof:yes'>|</span>
-        <span style='mso-bidi-font-size:10.0pt;font-family:"Calibri",sans-serif'>
+        <span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif'>
             <a href="mailto:Zaki.Alam@gmail.com" target="_blank" rel="noopener noreferrer">Zaki.Alam@gmail.com</a>
         </span>
         <span style='mso-no-proof:yes'>|</span>
@@ -36,7 +36,7 @@ margin-bottom:0in;margin-left:-22.5pt;text-align:center'>
     </p>
 
     <p class=MsoNormal style='margin-bottom:0in'>
-        <span style='font-size:10.0pt;line-height:107%'>
+        <span style='font-size:14.0pt;line-height:107%'>
             <o:p>&nbsp;</o:p>
         </span>
     </p>
@@ -64,7 +64,7 @@ margin-left:9.0pt;text-indent:-9.0pt;line-height:normal;mso-list:l1 level1 lfo2;
 tab-stops:63.0pt;background:white'>
         <![if !supportLists]>
         <span
-            style='font-size:10.0pt;mso-bidi-font-size:11.0pt;font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol'>
+            style='font-size:14.0pt;mso-bidi-font-size:14.0pt;font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol'>
             <span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp; </span>
             </span>
         </span>
@@ -91,7 +91,7 @@ color:black;mso-color-alt:windowtext'>
         style='mso-margin-top-alt:auto;margin-bottom:0in;margin-left:9.0pt;text-indent:-9.0pt;line-height:normal;mso-list:l1 level1 lfo2;tab-stops:63.0pt;background:white'>
         <![if !supportLists]>
         <span
-            style='font-size:10.0pt;mso-bidi-font-size:11.0pt;font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol'><span
+            style='font-size:14.0pt;mso-bidi-font-size:14.0pt;font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol'><span
                 style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                 </span>
             </span>
@@ -111,7 +111,7 @@ margin-left:9.0pt;text-indent:-9.0pt;line-height:normal;mso-list:l1 level1 lfo2;
 tab-stops:63.0pt;background:white'>
         <![if !supportLists]>
         <span style='font-size:
-10.0pt;mso-bidi-font-size:11.0pt;font-family:Symbol;mso-fareast-font-family:
+10.0pt;mso-bidi-font-size:14.0pt;font-family:Symbol;mso-fareast-font-family:
 Symbol;mso-bidi-font-family:Symbol'>
             <span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                 </span>
@@ -151,7 +151,7 @@ border:none;mso-border-bottom-alt:solid #AAAAAA 1.0pt;padding:0in;mso-padding-al
 
     </div>
     <center>
-        <table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width=636 style='width:477.0pt;margin-left:-4.5pt;border-collapse:collapse;border:none;
+        <table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width="100%" style='border-collapse:collapse;border:none;
  mso-yfti-tbllook:1184;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:
  none;mso-border-insidev:none'>
             <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
@@ -431,12 +431,12 @@ minor-latin'>A Career Focused on Making Business Succeed<o:p></o:p></span></p>
     </div>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>IT Generalist, 12/2021 to present<o:p></o:p></span></i></b></p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>Manager, Technical Support, 6/2019 to 12/2021<o:p></o:p></span></i></b></p>
 
@@ -482,7 +482,7 @@ color:#0085C3;mso-bidi-font-weight:bold;mso-bidi-font-style:italic'>
         </span></p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>CTO / Senior Executive VP, 7/2018 to 12/2019<o:p></o:p></span></i></b></p>
 
@@ -503,7 +503,7 @@ normal'><span style='font-family:"Calibri",sans-serif'> Inc – Lexington, MA<o:
         </span></p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>Senior Director, Enterprise Architect &amp; IT Strategy, 9/2006
                     to 7/2018<o:p></o:p></span></i></b></p>
@@ -548,7 +548,7 @@ margin-left:9.0pt;text-indent:-9.0pt'>•<span style='mso-tab-count:1'>  </span
     </p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>Senior Director, Enterprise Architecture – Data &amp;
                     Infrastructure<o:p></o:p></span></i></b></p>
@@ -590,7 +590,7 @@ margin-left:9.0pt;text-indent:-9.0pt'>•<span style='mso-tab-count:1'>  </span
     </p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>Executive Principal/Founder, 1/2004 to 9/2006<o:p></o:p></span></i></b></p>
 
@@ -606,12 +606,12 @@ color:#0085C3'>Executive Principal/Founder, 1/2004 to 9/2006<o:p></o:p></span></
     </p>
 
     <p class=SectionText style='text-align:justify'><b style='mso-bidi-font-weight:
-normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;
+normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
 minor-latin'>Notable Projects<o:p></o:p></span></b></p>
 
     <p class=SectionText style='text-align:justify'><b style='mso-bidi-font-weight:
-normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;
+normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
 minor-latin'>Royal Ahold</span></b></p>
 
@@ -635,7 +635,7 @@ margin-left:9.0pt;text-indent:-9.0pt'>•<span style='mso-tab-count:1'>  </span
     </p>
 
     <p class=SectionText style='text-align:justify'><b style='mso-bidi-font-weight:
-normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;
+normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;
 mso-ascii-theme-font:minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:
 minor-latin'>CVS Corporation<o:p></o:p></span></b></p>
 
@@ -650,7 +650,7 @@ minor-latin'>CVS Corporation<o:p></o:p></span></b></p>
     </p>
 
     <p class=SectionText style='text-align:justify;tab-stops:5.0in'><b style='mso-bidi-font-weight:normal'><i
-                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:11.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
+                style='mso-bidi-font-style:normal'><span style='mso-bidi-font-size:14.0pt;font-family:"Calibri",sans-serif;mso-ascii-theme-font:
 minor-latin;mso-hansi-theme-font:minor-latin;mso-bidi-theme-font:minor-latin;
 color:#0085C3'>Additional Relevant Experiences, 1997 to 2004<o:p></o:p></span></i></b></p>
 
@@ -690,7 +690,7 @@ minor-latin'>Educational Background &amp; Affiliations</span></p>
 
     <p class=MsoNormal style='margin-bottom:0in'><b>Training &amp; Certifications<o:p></o:p></b></p>
 
-    <table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width=636 style='width:477.0pt;margin-left:-4.5pt;border-collapse:collapse;border:none;
+    <table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 width="100%" style='border-collapse:collapse;border:none;
  mso-yfti-tbllook:1184;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:
  none;mso-border-insidev:none'>
         <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
