--- a/pages/resume.html
+++ b/pages/resume.html
@@ -110,10 +110,9 @@ color:black;mso-color-alt:windowtext'> <span style='mso-tab-count:1'>      
 margin-left:9.0pt;text-indent:-9.0pt;line-height:normal;mso-list:l1 level1 lfo2;
 tab-stops:63.0pt;background:white'>
         <![if !supportLists]>
-        <span style='font-size:
-10.0pt;mso-bidi-font-size:14.0pt;font-family:Symbol;mso-fareast-font-family:
-Symbol;mso-bidi-font-family:Symbol'>
-            <span style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
+        <span
+            style='font-size:14.0pt;mso-bidi-font-size:14.0pt;font-family:Symbol;mso-fareast-font-family:Symbol;mso-bidi-font-family:Symbol'><span
+                style='mso-list:Ignore'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                 </span>
             </span>
         </span>
