--- a/pages/resume.html
+++ b/pages/resume.html
@@ -799,4 +799,10 @@ normal'>Publications<o:p></o:p></b></p>
         <o:p>&nbsp;</o:p>
     </p>
 
+    <hr>
+
+    <a href="/assets/pdf/Zaki_Alam_Resume.pdf"><img src="/assets/images/download_pdf.svg" width="20px"> Download Zaki Alam Resume (PDF)</a>
+
 </div>
+
+
