add pdf and clean up

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -801,8 +801,7 @@ normal'>Publications<o:p></o:p></b></p>
 
     <hr>
 
-    <a href="/assets/pdf/Zaki_Alam_Resume.pdf"><img src="/assets/images/download_pdf.svg" width="20px"> Download Zaki Alam Resume (PDF)</a>
+    <a href="/assets/pdf/Zaki_Alam_Resume.pdf"><img src="/assets/images/download_pdf.svg" width="20px"> Download Zaki Alam Resume (PDF)</a><br>
+    <a href="/assets/pdf/Zaki_Alam-Career_Highlights.pdf"><img src="/assets/images/download_pdf.svg" width="20px"> Download Zaki Alam - Career Highlights (PDF)</a>
 
 </div>
-
-
